--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
              xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>MySel20Proj</groupId>
-    <artifactId>MySel20Proj</artifactId>
+    <groupId>selenium</groupId>
+    <artifactId>fizzbuzz</artifactId>
     <version>1.0</version>
     <dependencies>
     	<dependency>
@@ -22,6 +22,12 @@
 		    <groupId>org.seleniumhq.webdriver</groupId>
 		    <artifactId>webdriver-chrome</artifactId>
         </dependency>
+         <dependency>
+            <groupId>com.saucelabs</groupId>
+            <artifactId>sauce_junit</artifactId>
+            <version>[1.0.0,)</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -38,4 +44,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <repositories>
+        <repository>
+            <id>saucelabs-repository</id>
+            <url>http://repository-saucelabs.forge.cloudbees.com/release</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
