--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <groupId>selenium</groupId>
     <artifactId>fizzbuzz</artifactId>
     <version>1.0</version>
+    
+    
+
     <dependencies>
     	<dependency>
   			<groupId>junit</groupId>
@@ -57,4 +60,34 @@
             </snapshots>
         </repository>
     </repositories>
+    
+    <build>
+    <plugins>
+    <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>selenium-maven-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+            <execution>
+                <id>xvfb</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                    <goal>xvfb</goal>
+                </goals>
+            </execution>
+            
+            <execution>
+                <id>selenium</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                    <goal>start-server</goal>
+                </goals>
+                <configuration>
+                    <background>true</background>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+</plugins>
+    </build>
 </project>
