Updated Build Options
* Allow build to run locally or on SauceLabs using -Dremote= true/false
* Added Travis-CI build image
* Increased delay between clicks

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
                 </goals>
                 <configuration>
                     <background>true</background>
+                    <systemProperties>
+          				<property>
+            				 <name>remote</name>
+             				<value>${remote}</value>
+          				</property>
+        			</systemProperties>
                 </configuration>
             </execution>
         </executions>
