--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - openjdk6
 before_install: mvn install -DskipTests=true -DfinalName=helloci
-install: mvn test
+script: mvn test
