Updated to be complient to run tests as mvn test. Changed entry in pom.xml and change name of the java file/class

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
                 <version>2.18.1</version>
                 <configuration>
                     <includes>
-                        <include>EspnSeleniumTest2.java</include>
+                        <include>**/*Test.*</include>
                     </includes>
                 </configuration>
             </plugin>
