--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ jdk:
   - oraclejdk8
 script: ant
 env:
-  global:
+global:
     - secure: “rduvalwa5”
-    - secure: “Red1Dawg"
+    - secure: “xxxx7483-1bfd-4635-87a6-7b90546396c9""
