--- a/imtiaz/.travis.yml
+++ b/imtiaz/.travis.yml
@@ -3,4 +3,8 @@ addons:
   sauce_connect:
     username: "imtihoss"
     access_key: "ce4378aa-362e-4c67-a319-c21b38ae5c6a"
-script: mvn -Dfile=pom.xml clean test -Dtest=EspnNflTests*
+env:
+  global:
+    - REPO="https://github.com/imtiazhossain/fizzbuzz-selenium/tree/imtiaz/imtiaz"
+    - CI_HOME=`pwd`/$REPO
+script: mvn clean test -Dtest=EspnNflTests*
